methods.flowerpot.FlowerCase.scala.error
Compilation error:
FlowerCase:20: error: value Blue is not a member of object java.awt.Color
  growFlowers(Color.Blue)
                    ^